Add colors and quality parameters
